[package]
name = "meterdb"
version = "0.1.0"
edition = "2024"

[features]
default = []
std = ["chrono/now"]

[dependencies]
chrono = { version = "0.4.41", default-features = false }
crc-any = "2.5.0"
heapless = "0.9.1"
thiserror = { version = "2.0.16", default-features = false }

[dev-dependencies]
insta = "1.43.1"
rstest = { version = "0.26.1", default-features = false }
chrono = { version = "0.4.41", features = ["now"], default-features = false }
